--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+.DS_Store
+Build
+Unity/*
+!Unity/Assets
+!Unity/ProjectSettings
+
 # Build Folders (you can keep bin if you'd like, to store dlls and pdbs)
 [Bb]in/
 [Oo]bj/
